fix avatar rating icon spacing

--- a/src/scss/objects/_avatar.scss
+++ b/src/scss/objects/_avatar.scss
@@ -71,7 +71,7 @@ $avatar-bad-color-hover: $default-error-light-color !default;
 		z-index: 101;
 		bottom: 0;
 		float: left;
-		padding: $sp1-2;
+		padding: $sp1;
 	}
 
 	&-rate-good {
